[project]
name = 'savemanager'
readme = 'README.md'
version = 'v0.0.1'
dependencies = ['imgui[glfw]==2.0.0', 'hldlib==0.1.1']

[project.optional-dependencies]
dev = ['pyimgui-stubs==0.0.2']

[project.scripts]
savemanager = 'savemanager:main'

[project.urls]
Homepage = 'https://github.com/sakhezech/HLSaveEditor'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
